# bash-completion

./: .commitlintrc.yaml  .dir-locals.el  .dockerignore  .editorconfig  .gear-rules  .gitignore  .gitlint  .markdownlint.yaml  .perltidyrc  .pre-commit-config.yaml  .pymarkdown.json  .shellcheckrc  .travis.yml  .typos.toml  AUTHORS  BUGS  CHANGELOG.md  CHANGES  CONTRIBUTING.md  Changelog  Dockerfile  Makefile.am  README  README.md  TEST  TODO  _known_hosts_fix  _mono  add-change.sh  autogen.sh  base.in  bash-completion-20050103-alt-rsync.patch  bash-completion-20060301-alt-iptables.patch  bash-completion-config-version.cmake.in  bash-completion-config.cmake.in  bash-completion.conf.in  bash-completion.pc.in  bash-completion.sh  bash-completion.spec  bash_completion  (+14 more)
completions/: .gitignore  2to3  7z  ARRAY  Makefile.am  README.md  VBoxManage  _adb  _cal  _cargo  _chfn  _chsh  _coder  _dd  _dmesg  _eject  _gh  _golangci-lint  _hexdump  _hwclock  _insmod  _ionice  _jj  _jungle  _keyring  _look  _mock  _modinfo  _modprobe  _modules  _mount  _mount.linux  _mtr  _newgrp  _nmcli  _nox  _nvm  _op  _pipenv  _printenv  (+580 more)
completions-core/: .gitignore  2to3.bash  7z.bash  ARRAY.bash  Makefile.am  a2x.bash  abook.bash  aclocal.bash  acpi.bash  add_members.bash  alias.bash  alternatives.bash  ant.bash  apache2ctl.bash  appdata-validate.bash  apt-build.bash  apt-cache.bash  apt-get.bash  apt-mark.bash  aptitude.bash  arch.bash  arp.bash  arping.bash  arpspoof.bash  asciidoc.bash  aspell.bash  autoconf.bash  automake.bash  autoreconf.bash  autorpm.bash  autoscan.bash  avahi-browse.bash  avctrl.bash  badblocks.bash  bind.bash  bk.bash  brctl.bash  btdownloadheadless.py.bash  bts.bash  bzip2.bash  (+423 more)
completions-fallback/: .gitignore  Makefile.am  adb.bash  argc.bash  bombadil.bash  cal.bash  cargo.bash  chfn.bash  chsh.bash  coder.bash  delta.bash  dmesg.bash  dpkg-source.bash  dpkg.bash  dselect.bash  eject.bash  flamegraph.bash  gaiacli.bash  gh.bash  golangci-lint.bash  gsctl.bash  hexdump.bash  hwclock.bash  insmod.bash  interdiff.bash  ionice.bash  jj.bash  jreleaser.bash  jungle.bash  keyring.bash  kontena.bash  look.bash  mdbook.bash  mock.bash  modinfo.bash  modprobe.bash  modules.bash  mount.bash  mount.linux.bash  mtr.bash  (+41 more)
completions/helpers/: Makefile.am  perl  perldoc
contrib/: Makefile.am  _mock  _modules  _subversion  _yum  _yum-utils  abook  ant  apache2ctl  apt  apt-build  aptitude  aspell  autorpm  bash-builtins  bind-utils  bitkeeper  bittorrent  bluez  bluez-utils  brctl  bzip2  cardctl  cfengine  chkconfig  chsh  cksfv  clisp  configure  coreutils  cowsay  cpan2dist  cpio  cryptsetup  cups  cvs  cvsps  dcop  dd  dhclient  (+146 more)
test/: .gitignore  Makefile.am  codespell-ignore.txt  docker-script.sh  generate  macos-script.sh  requirements-dev.txt  requirements.txt  run  run-shellcheck  runCompletion  runInstall  runLint  runUnit  setup.cfg  test-cmd-list.txt  update-test-cmd-list
test/_completion_to_review/: a2ps.exp  add_members.exp  ant.exp  apt-build.exp  arpspoof.exp  bison.exp  cancel.exp  check_perms.exp  clone_member.exp  cut.exp  dcop.exp  df.exp  display.exp  dnsspoof.exp  dpkg-reconfigure.exp  dpkg.exp  dropdb.exp  enscript.exp  env.exp  evince.exp  filesnarf.exp  fold.exp  g++.exp  gcc.exp  genaliases.exp  gkrellm.exp  gnatmake.exp  gpc.exp  gpg.exp  gprof.exp  head.exp  hg.exp  identify.exp  ifup.exp  inject.exp  irb.exp  javac.exp  kill.exp  killall.exp  kldload.exp  (+69 more)
test/completion/: .ld.exp.swp  2to3.exp  7z.exp  VBoxManage.exp  a2ps.exp  a2x.exp  abook.exp  aclocal.exp  acpi.exp  acroread.exp  adb.exp  add_members.exp  alias.exp  alpine.exp  animate.exp  ant.exp  apache2ctl.exp  appdata-validate.exp  apt-build.exp  apt-cache.exp  apt-get.exp  apt.exp  aptitude.exp  arch.exp  arping.exp  arpspoof.exp  asciidoc.exp  aspell.exp  autoconf.exp  autoheader.exp  automake.exp  autoreconf.exp  autorpm.exp  autoscan.exp  autoupdate.exp  avctrl.exp  awk.exp  badblocks.exp  base64.exp  bash.exp  (+617 more)
test/completion_to_review/: apt-cache.exp  arch.exp  awk.exp  bash.exp  bc.exp  c++.exp  cardctl.exp  change_pw.exp  ci.exp  civclient.exp  clisp.exp  config_list.exp  dpkg-source.exp  dsniff.exp  expand.exp  find.exp  find_member.exp  fmt.exp  g4.exp  g77.exp  gcj.exp  gcl.exp  gdb.exp  getent.exp  gmplayer.exp  gperf.exp  grep.exp  grub.exp  iconv.exp  id.exp  ifdown.exp  indent.exp  info.exp  insmod.exp  invoke-rc.d.exp  isql.exp  iwconfig.exp  java.exp  javadoc.exp  kplayer.exp  (+83 more)
test/config/: bashrc  default.exp  inputrc
test/deprecated/: Makefile.am  update-deprecated-links
test/deprecated/completions/: Makefile.am  README.md  chsh  eject  hexdump  ionice  look  mock  modules  rtcwake  slackpkg  svn  udevadm  umount  xm
test/docker/: Dockerfile  Dockerfile-alpine  Dockerfile-centos6  Dockerfile-fedoradev  Dockerfile-tools  Dockerfile-ubuntu14  docker-script.sh  entrypoint.sh
test/docker/almalinux9/: Dockerfile  install-packages.sh
test/fallback/: Makefile.am  update-fallback-links
test/fixtures/7z/: a.7z  (+2 more)
test/lib/: completion.exp  library.exp  library.sh  unit.exp
test/t/: Makefile.am  conftest.py  test_2to3.py  test_7z.py  test_a2ps.py  test_a2x.py  test_abook.py  test_aclocal.py  test_acpi.py  test_acroread.py  test_adb.py  test_add_members.py  test_alias.py  test_alpine.py  test_animate.py  test_ant.py  test_apache2ctl.py  test_appdata-validate.py  test_appdata_validate.py  test_apt-build.py  test_apt-cache.py  test_apt-get.py  test_apt_build.py  test_apt_cache.py  test_apt_get.py  test_apt_mark.py  test_aptitude.py  test_arch.py  test_arp.py  test_arping.py  test_arpspoof.py  test_asciidoc.py  test_aspell.py  test_autoconf.py  test_autoheader.py  test_automake.py  test_autoreconf.py  test_autorpm.py  test_autoscan.py  test_autossh.py  (+745 more)
test/unit/: __expand_tilde_by_ref.exp  _count_args.exp  _expand.exp  _filedir.exp  _get_comp_words_by_ref.exp  _get_cword.exp  _init_completion.exp  _ip_addresses.exp  _known_hosts.exp  _known_hosts_real.exp  _parse_help.exp  _parse_usage.exp  _tilde.exp  _variables.exp  compgen.exp  find_unique_completion_pair.exp  quote.exp
(+1404 files in other folders)
