cross_platform = 2to3.bash \
		7z.bash \
		a2x.bash \
		abook.bash \
		aclocal.bash \
		acpi.bash \
		add_members.bash \
		alias.bash \
		ant.bash \
		apache2ctl.bash \
		appdata-validate.bash \
		apt-build.bash \
		apt-cache.bash \
		apt-get.bash \
		apt-mark.bash \
		aptitude.bash \
		arch.bash \
		arp.bash \
		arping.bash \
		arpspoof.bash \
		asciidoc.bash \
		aspell.bash \
		autoconf.bash \
		automake.bash \
		autoreconf.bash \
		autorpm.bash \
		autoscan.bash \
		avahi-browse.bash \
		avctrl.bash \
		badblocks.bash \
		bind.bash \
		bk.bash \
		brctl.bash \
		btdownloadheadless.py.bash \
		bts.bash \
		bzip2.bash \
		cancel.bash \
		cardctl.bash \
		carton.bash \
		ccache.bash \
		ccze.bash \
		cd.bash \
		cfagent.bash \
		cfrun.bash \
		chage.bash \
		change_pw.bash \
		check_db.bash \
		check_perms.bash \
		checksec.bash \
		chflags.bash \
		chgrp.bash \
		chkconfig.bash \
		chmod.bash \
		chown.bash \
		chpasswd.bash \
		chromium-browser.bash \
		chronyc.bash \
		chrpath.bash \
		cksfv.bash \
		cleanarch.bash \
		clisp.bash \
		clone_member.bash \
		complete.bash \
		config_list.bash \
		configure.bash \
		convert.bash \
		cowsay.bash \
		cpan2dist.bash \
		cpio.bash \
		cppcheck.bash \
		crontab.bash \
		cryptsetup.bash \
		curl.bash \
		cvs.bash \
		cvsps.bash \
		dd.bash \
		declare.bash \
		deja-dup.bash \
		desktop-file-validate.bash \
		dhclient.bash \
		dict.bash \
		dmypy.bash \
		dnssec-keygen.bash \
		dnsspoof.bash \
		dot.bash \
		dpkg.bash \
		dpkg-source.bash \
		dselect.bash \
		dsniff.bash \
		dumpdb.bash \
		dumpe2fs.bash \
		e2freefrag.bash \
		e2label.bash \
		ebtables.bash \
		ecryptfs-migrate-home.bash \
		env.bash \
		eog.bash \
		ether-wake.bash \
		evince.bash \
		explodepkg.bash \
		export.bash \
		faillog.bash \
		fbgs.bash \
		fbi.bash \
		feh.bash \
		file.bash \
		file-roller.bash \
		filefrag.bash \
		filesnarf.bash \
		find.bash \
		find_member.bash \
		fio.bash \
		firefox.bash \
		flake8.bash \
		fprintd-delete.bash \
		fprintd-enroll.bash \
		free.bash \
		freeciv.bash \
		freeciv-server.bash \
		function.bash \
		fusermount.bash \
		gcc.bash \
		gcl.bash \
		gdb.bash \
		genaliases.bash \
		gendiff.bash \
		genisoimage.bash \
		geoiplookup.bash \
		getconf.bash \
		getent.bash \
		gkrellm.bash \
		gm.bash \
		gnatmake.bash \
		gnokii.bash \
		gnome-mplayer.bash \
		gnome-screenshot.bash \
		gpasswd.bash \
		gpg.bash \
		gpg2.bash \
		gpgv.bash \
		gphoto2.bash \
		gprof.bash \
		groupadd.bash \
		groupdel.bash \
		groupmems.bash \
		groupmod.bash \
		growisofs.bash \
		grpck.bash \
		gssdp-discover.bash \
		gzip.bash \
		hash.bash \
		hcitool.bash \
		hddtemp.bash \
		help.bash \
		hid2hci.bash \
		hostname.bash \
		hping2.bash \
		htop.bash \
		htpasswd.bash \
		hunspell.bash \
		iconv.bash \
		id.bash \
		idn.bash \
		ifstat.bash \
		iftop.bash \
		ifup.bash \
		influx.bash \
		info.bash \
		inject.bash \
		inotifywait.bash \
		installpkg.bash \
		interdiff.bash \
		invoke-rc.d.bash \
		ip.bash \
		ipcalc.bash \
		iperf.bash \
		ipmitool.bash \
		ipsec.bash \
		iptables.bash \
		ipv6calc.bash \
		iscsiadm.bash \
		isort.bash \
		isql.bash \
		iwconfig.bash \
		iwlist.bash \
		iwpriv.bash \
		iwspy.bash \
		jar.bash \
		jarsigner.bash \
		java.bash \
		javaws.bash \
		jpegoptim.bash \
		jps.bash \
		jq.bash \
		jshint.bash \
		json_xs.bash \
		jsonschema.bash \
		k3b.bash \
		kcov.bash \
		kill.bash \
		killall.bash \
		koji.bash \
		ktutil.bash \
		larch.bash \
		lastlog.bash \
		ldapsearch.bash \
		ldapvi.bash \
		lftp.bash \
		lftpget.bash \
		lilo.bash \
		links.bash \
		lintian.bash \
		lisp.bash \
		list_admins.bash \
		list_lists.bash \
		list_members.bash \
		list_owners.bash \
		locale-gen.bash \
		lpq.bash \
		lpr.bash \
		lrzip.bash \
		lsof.bash \
		lsscsi.bash \
		lsusb.bash \
		lua.bash \
		luac.bash \
		luseradd.bash \
		luserdel.bash \
		lvm.bash \
		lz4.bash \
		lzip.bash \
		lzma.bash \
		lzop.bash \
		macof.bash \
		mailmanctl.bash \
		make.bash \
		makepkg.bash \
		man.bash \
		mc.bash \
		mcrypt.bash \
		mdadm.bash \
		mdtool.bash \
		medusa.bash \
		mfiutil.bash \
		mii-diag.bash \
		mii-tool.bash \
		minicom.bash \
		mkinitrd.bash \
		mktemp.bash \
		mmsitepass.bash \
		monodevelop.bash \
		mplayer.bash \
		mr.bash \
		msynctool.bash \
		mtx.bash \
		munindoc.bash \
		munin-node-configure.bash \
		munin-run.bash \
		munin-update.bash \
		mussh.bash \
		mutt.bash \
		mypy.bash \
		mysql.bash \
		mysqladmin.bash \
		nc.bash \
		ncftp.bash \
		nethogs.bash \
		newlist.bash \
		newusers.bash \
		ngrep.bash \
		nload.bash \
		nmap.bash \
		nproc.bash \
		nslookup.bash \
		nsupdate.bash \
		ntpdate.bash \
		oggdec.bash \
		openssl.bash \
		opera.bash \
		optipng.bash \
		p4.bash \
		pack200.bash \
		passwd.bash \
		patch.bash \
		pdftoppm.bash \
		pdftotext.bash \
		perl.bash \
		perlcritic.bash \
		perltidy.bash \
		pgrep.bash \
		pidof.bash \
		pine.bash \
		ping.bash \
		pkg-config.bash \
		pkg-get.bash \
		pkgadd.bash \
		pkgrm.bash \
		pkgtool.bash \
		plague-client.bash \
		pm-hibernate.bash \
		pm-is-supported.bash \
		pm-powersave.bash \
		pngfix.bash \
		postcat.bash \
		postconf.bash \
		postfix.bash \
		postmap.bash \
		postsuper.bash \
		povray.bash \
		prelink.bash \
		printenv.bash \
		protoc.bash \
		ps.bash \
		psql.bash \
		puppet.bash \
		pv.bash \
		pwck.bash \
		pwd.bash \
		pwdx.bash \
		pwgen.bash \
		pycodestyle.bash \
		pydoc.bash \
		pydocstyle.bash \
		pyflakes.bash \
		pylint.bash \
		pytest.bash \
		python.bash \
		pyvenv.bash \
		qdbus.bash \
		qemu.bash \
		qrunner.bash \
		querybts.bash \
		quota.bash \
		radvdump.bash \
		rcs.bash \
		rdesktop.bash \
		remove_members.bash \
		removepkg.bash \
		reportbug.bash \
		resolvconf.bash \
		ri.bash \
		rmlist.bash \
		route.bash \
		rpcdebug.bash \
		rpm.bash \
		rpm2tgz.bash \
		rpmcheck.bash \
		rrdtool.bash \
		rsync.bash \
		sbcl.bash \
		sbopkg.bash \
		screen.bash \
		scrub.bash \
		set.bash \
		sh.bash \
		sha256sum.bash \
		shellcheck.bash \
		sitecopy.bash \
		slabtop.bash \
		slapt-get.bash \
		slapt-src.bash \
		smartctl.bash \
		smbclient.bash \
		snownews.bash \
		sqlite3.bash \
		ss.bash \
		ssh.bash \
		ssh-add.bash \
		ssh-copy-id.bash \
		ssh-keygen.bash \
		ssh-keyscan.bash \
		sshfs.bash \
		sshmitm.bash \
		sshow.bash \
		strace.bash \
		strings.bash \
		sudo.bash \
		svcadm.bash \
		svk.bash \
		sync_members.bash \
		synclient.bash \
		sysbench.bash \
		sysctl.bash \
		tar.bash \
		tcpdump.bash \
		tcpkill.bash \
		tcpnice.bash \
		timeout.bash \
		tipc.bash \
		tmux.bash \
		tox.bash \
		tracepath.bash \
		tree.bash \
		truncate.bash \
		tshark.bash \
		tsig-keygen.bash \
		tune2fs.bash \
		ulimit.bash \
		unace.bash \
		unpack200.bash \
		unrar.bash \
		unshunt.bash \
		update-alternatives.bash \
		update-rc.d.bash \
		upgradepkg.bash \
		urlsnarf.bash \
		useradd.bash \
		userdel.bash \
		usermod.bash \
		valgrind.bash \
		vipw.bash \
		vmstat.bash \
		vncviewer.bash \
		vpnc.bash \
		watch.bash \
		webmitm.bash \
		wget.bash \
		wine.bash \
		withlist.bash \
		wodim.bash \
		wol.bash \
		wsimport.bash \
		wtf.bash \
		wvdial.bash \
		xdg-mime.bash \
		xdg-settings.bash \
		xev.bash \
		xfreerdp.bash \
		xgamma.bash \
		xhost.bash \
		xmllint.bash \
		xmlwf.bash \
		xmms.bash \
		xmodmap.bash \
		xrandr.bash \
		xrdb.bash \
		xsltproc.bash \
		xvfb-run.bash \
		xxd.bash \
		xz.bash \
		xzdec.bash \
		ypmatch.bash \
		yum-arch.bash \
		zopfli.bash \
		zopflipng.bash

solaris_extra = pkgutil.bash

bsd_extra = pkg_delete.bash

freebsd_extra = \
		freebsd-update.bash \
		kldload.bash \
		kldunload.bash \
		portinstall.bash \
		portsnap.bash \
		portupgrade.bash

# We include all the files in the tarball
EXTRA_DIST = $(cross_platform) \
	     $(solaris_extra) \
	     $(bsd_extra) \
	     $(freebsd_extra)

bashcompcoredir = $(datadir)/$(PACKAGE)/completions-core
bashcompcore_DATA = $(cross_platform)
# We add only the completions that are relevant for the current platform we're
# installing on.
if SOLARIS
bashcompcore_DATA += $(solaris_extra)
endif
if BSD
bashcompcore_DATA += $(bsd_extra)
endif
if FREEBSD
bashcompcore_DATA += $(freebsd_extra)
endif

CLEANFILES = \
	7za.bash \
	7zr.bash \
	7zz.bash \
	7zzs.bash \
	aclocal-1.10.bash \
	aclocal-1.11.bash \
	aclocal-1.12.bash \
	aclocal-1.13.bash \
	aclocal-1.14.bash \
	aclocal-1.15.bash \
	aclocal-1.16.bash \
	aclocal-1.17.bash \
	alpine.bash \
	alternatives.bash \
	animate.bash \
	apropos.bash \
	aptitude-curses.bash \
	arm-koji.bash \
	asciidoc.py.bash \
	autoheader.bash \
	automake-1.10.bash \
	automake-1.11.bash \
	automake-1.12.bash \
	automake-1.13.bash \
	automake-1.14.bash \
	automake-1.15.bash \
	automake-1.16.bash \
	automake-1.17.bash \
	autossh.bash \
	autoupdate.bash \
	avahi-browse-domains.bash \
	b2sum.bash \
	bmake.bash \
	brave.bash \
	brave-browser.bash \
	bsdtar.bash \
	btdownloadcurses.py.bash \
	btdownloadgui.py.bash \
	c++.bash \
	cc.bash \
	cdrecord.bash \
	chrome.bash \
	chromium.bash \
	ci.bash \
	ciptool.bash \
	civclient.bash \
	civserver.bash \
	cksum.bash \
	clzip.bash \
	co.bash \
	colormake.bash \
	compare.bash \
	compgen.bash \
	composite.bash \
	conjure.bash \
	cowthink.bash \
	createdb.bash \
	createuser.bash \
	dcop.bash \
	dfutool.bash \
	display.bash \
	dpkg-deb.bash \
	dpkg-query.bash \
	dpkg-reconfigure.bash \
	dropdb.bash \
	dropuser.bash \
	edquota.bash \
	etherwake.bash \
	f77.bash \
	f95.bash \
	filebucket.bash \
	firefox-esr.bash \
	fprintd-list.bash \
	fprintd-verify.bash \
	freeciv-gtk2.bash \
	freeciv-gtk3.bash \
	freeciv-sdl.bash \
	freeciv-xaw.bash \
	fsnotifywait.bash \
	fsnotifywatch.bash \
	g++.bash \
	g++-5.bash \
	g++-6.bash \
	g++-7.bash \
	g++-8.bash \
	g4.bash \
	g77.bash \
	g95.bash \
	gcc-5.bash \
	gcc-6.bash \
	gcc-7.bash \
	gcc-8.bash \
	gccgo.bash \
	gccgo-5.bash \
	gccgo-6.bash \
	gccgo-7.bash \
	gccgo-8.bash \
	gcj.bash \
	geoiplookup6.bash \
	gfortran.bash \
	gfortran-5.bash \
	gfortran-6.bash \
	gfortran-7.bash \
	gfortran-8.bash \
	gkrellm2.bash \
	gmake.bash \
	gmplayer.bash \
	gnumake.bash \
	google-chrome.bash \
	google-chrome-stable.bash \
	gpc.bash \
	gpgv2.bash \
	gssdp-device-sniffer.bash \
	gtar.bash \
	hciattach.bash \
	hciconfig.bash \
	host.bash \
	hping.bash \
	hping3.bash \
	iceweasel.bash \
	identify.bash \
	ifdown.bash \
	ifquery.bash \
	ifstatus.bash \
	import.bash \
	inotifywatch.bash \
	iperf3.bash \
	javac.bash \
	javadoc.bash \
	kplayer.bash \
	l2ping.bash \
	lbzip2.bash \
	ldapadd.bash \
	ldapcompare.bash \
	ldapdelete.bash \
	ldapmodify.bash \
	ldapmodrdn.bash \
	ldappasswd.bash \
	ldapwhoami.bash \
	links2.bash \
	lintian-info.bash \
	lua5.0.bash \
	lua5.1.bash \
	lua5.2.bash \
	lua5.3.bash \
	lua5.4.bash \
	lua50.bash \
	lua51.bash \
	lua52.bash \
	lua53.bash \
	lua54.bash \
	luac5.0.bash \
	luac5.1.bash \
	luac5.2.bash \
	luac5.3.bash \
	luac5.4.bash \
	luac50.bash \
	luac51.bash \
	luac52.bash \
	luac53.bash \
	luac54.bash \
	lusermod.bash \
	lvchange.bash \
	lvcreate.bash \
	lvdisplay.bash \
	lvextend.bash \
	lvmdiskscan.bash \
	lvreduce.bash \
	lvremove.bash \
	lvrename.bash \
	lvresize.bash \
	lvs.bash \
	lvscan.bash \
	lz4c.bash \
	mailsnarf.bash \
	md5sum.bash \
	mdecrypt.bash \
	mencoder.bash \
	micropython.bash \
	mkisofs.bash \
	mogrify.bash \
	montage.bash \
	mozilla-firefox.bash \
	mplayer2.bash \
	mrsasutil.bash \
	msgsnarf.bash \
	muttng.bash \
	neomutt.bash \
	pbzip2.bash \
	pccardctl.bash \
	pdlzip.bash \
	perldoc.bash \
	phing.bash \
	pigz.bash \
	pinfo.bash \
	ping4.bash \
	ping6.bash \
	pkg_deinstall.bash \
	pkg_info.bash \
	pkgconf.bash \
	pkill.bash \
	plzip.bash \
	pm-suspend.bash \
	pm-suspend-hybrid.bash \
	pmake.bash \
	postalias.bash \
	ppc-koji.bash \
	puppetca.bash \
	puppetd.bash \
	puppetdoc.bash \
	puppetmasterd.bash \
	puppetqd.bash \
	puppetrun.bash \
	pushd.bash \
	pvchange.bash \
	pvcreate.bash \
	pvdisplay.bash \
	pvmove.bash \
	pvremove.bash \
	pvs.bash \
	pvscan.bash \
	pxz.bash \
	py.test.bash \
	py.test-2.bash \
	py.test-3.bash \
	pydoc3.bash \
	pydoc3.13.bash \
	pydoc3.14.bash \
	pydoc3.15.bash \
	pylint-2.bash \
	pylint-3.bash \
	pypy.bash \
	pypy3.bash \
	pyston.bash \
	pyston3.bash \
	pytest-2.bash \
	pytest-3.bash \
	python2.bash \
	python2.7.bash \
	python3.bash \
	python3.3.bash \
	python3.4.bash \
	python3.5.bash \
	python3.6.bash \
	python3.7.bash \
	python3.8.bash \
	python3.9.bash \
	python3.10.bash \
	python3.11.bash \
	python3.12.bash \
	python3.13.bash \
	python3.14.bash \
	python3.15.bash \
	pyvenv-3.4.bash \
	pyvenv-3.5.bash \
	pyvenv-3.6.bash \
	pyvenv-3.7.bash \
	pyvenv-3.8.bash \
	pyvenv-3.9.bash \
	pyvenv-3.10.bash \
	pyvenv-3.11.bash \
	pyvenv-3.12.bash \
	pyvenv-3.13.bash \
	pyvenv-3.14.bash \
	pyvenv-3.15.bash \
	qemu-kvm.bash \
	qemu-system-i386.bash \
	qemu-system-x86_64.bash \
	quotacheck.bash \
	quotaoff.bash \
	quotaon.bash \
	ralsh.bash \
	rcsdiff.bash \
	rdict.bash \
	repquota.bash \
	rfcomm.bash \
	rlog.bash \
	rpm2targz.bash \
	rpm2txz.bash \
	rpmbuild.bash \
	rpmbuild-md5.bash \
	s390-koji.bash \
	sbcl-mt.bash \
	scp.bash \
	sdptool.bash \
	setquota.bash \
	sftp.bash \
	sha1sum.bash \
	sha224sum.bash \
	sha384sum.bash \
	sha512sum.bash \
	shasum.bash \
	sidedoor.bash \
	slogin.bash \
	smbcacls.bash \
	smbcquotas.bash \
	smbget.bash \
	smbpasswd.bash \
	smbtar.bash \
	smbtree.bash \
	sparc-koji.bash \
	spovray.bash \
	star.bash \
	stream.bash \
	sudo-rs.bash \
	sudo.ws.bash \
	sudoedit.bash \
	tightvncviewer.bash \
	tracepath6.bash \
	typeset.bash \
	vgcfgbackup.bash \
	vgcfgrestore.bash \
	vgchange.bash \
	vgck.bash \
	vgconvert.bash \
	vgcreate.bash \
	vgdisplay.bash \
	vgexport.bash \
	vgextend.bash \
	vgimport.bash \
	vgmerge.bash \
	vgmknodes.bash \
	vgreduce.bash \
	vgremove.bash \
	vgrename.bash \
	vgs.bash \
	vgscan.bash \
	vgsplit.bash \
	vigr.bash \
	whatis.bash \
	wine-development.bash \
	wine-stable.bash \
	wine64.bash \
	wine64-development.bash \
	wine64-stable.bash \
	xpovray.bash \
	xvnc4viewer.bash \
	ypcat.bash

symlinks: $(DATA)
	$(ss) 7z \
		7za \
		7zr \
		7zz \
		7zzs
	$(ss) aclocal \
		aclocal-1.10 aclocal-1.11 aclocal-1.12 aclocal-1.13 \
		aclocal-1.14 aclocal-1.15 aclocal-1.16 aclocal-1.17
	$(ss) ant \
		phing
	$(ss) aptitude \
		aptitude-curses
	$(ss) asciidoc \
		asciidoc.py
	$(ss) automake \
		automake-1.10 automake-1.11 automake-1.12 automake-1.13 \
		automake-1.14 automake-1.15 automake-1.16 automake-1.17
	$(ss) autoreconf \
		autoheader
	$(ss) autoscan \
		autoupdate
	$(ss) avahi-browse \
		avahi-browse-domains
	$(ss) btdownloadheadless.py \
		btdownloadcurses.py btdownloadgui.py
	$(ss) bzip2 \
		lbzip2 pbzip2
	$(ss) cardctl \
		pccardctl
	$(ss) cd \
		pushd
	$(ss) chromium-browser \
		brave brave-browser chrome chromium google-chrome \
		google-chrome-stable
	$(ss) complete \
		compgen
	$(ss) convert \
		animate compare composite conjure display identify import \
		mogrify montage stream
	$(ss) cowsay \
		cowthink
	$(ss) declare \
		typeset
	$(ss) dict \
		rdict
	$(ss) dpkg \
		dpkg-deb dpkg-query dpkg-reconfigure
	$(ss) ether-wake \
		etherwake
	$(ss) filesnarf \
		mailsnarf msgsnarf
	$(ss) firefox \
		firefox-esr iceweasel mozilla-firefox
	$(ss) fprintd-delete \
		fprintd-list
	$(ss) fprintd-enroll \
		fprintd-verify
	$(ss) freeciv \
		civclient freeciv-gtk2 freeciv-gtk3 freeciv-sdl freeciv-xaw
	$(ss) freeciv-server \
		civserver
	$(ss) gcc \
		c++ cc f77 f95 g++ g++-5 g++-6 g++-7 g++-8 g77 g95 gcc-5 \
		gcc-6 gcc-7 gcc-8 gccgo gccgo-5 gccgo-6 gccgo-7 gccgo-8 gcj \
		gfortran gfortran-5 gfortran-6 gfortran-7 gfortran-8 gpc
	$(ss) genisoimage \
		mkisofs
	$(ss) geoiplookup \
		geoiplookup6
	$(ss) gkrellm \
		gkrellm2
	$(ss) gpgv \
		gpgv2
	$(ss) gssdp-discover \
		gssdp-device-sniffer
	$(ss) gzip \
		pigz
	$(ss) hcitool \
		ciptool dfutool hciattach hciconfig l2ping rfcomm sdptool
	$(ss) hping2 \
		hping hping3
	$(ss) ifup \
		ifdown ifquery ifstatus
	$(ss) info \
		pinfo
	$(ss) inotifywait \
		inotifywatch fsnotifywait fsnotifywatch
	$(ss) iperf \
		iperf3
	$(ss) java \
		javac javadoc
	$(ss) koji \
		arm-koji ppc-koji s390-koji sparc-koji
	$(ss) ldapsearch \
		ldapadd ldapcompare ldapdelete ldapmodify ldapmodrdn \
		ldappasswd ldapwhoami
	$(ss) links \
		links2
	$(ss) lintian \
		lintian-info
	$(ss) lua \
		lua50 lua5.0 lua51 lua5.1 lua52 lua5.2 lua53 lua5.3 lua54 \
		lua5.4
	$(ss) luac \
		luac50 luac5.0 luac51 luac5.1 luac52 luac5.2 luac53 luac5.3 \
		luac54 luac5.4
	$(ss) luseradd \
		lusermod
	$(ss) lvm \
		lvchange lvcreate lvdisplay lvextend lvmdiskscan lvreduce \
		lvremove lvrename lvresize lvs lvscan pvchange pvcreate \
		pvdisplay pvmove pvremove pvs pvscan vgcfgbackup vgcfgrestore \
		vgchange vgck vgconvert vgcreate vgdisplay vgexport vgextend \
		vgimport vgmerge vgmknodes vgreduce vgremove vgrename vgs \
		vgscan vgsplit
	$(ss) lz4 \
		lz4c
	$(ss) lzip \
		clzip pdlzip plzip
	$(ss) make \
		bmake colormake gmake gnumake pmake
	$(ss) man \
		apropos whatis
	$(ss) mcrypt \
		mdecrypt
	$(ss) mfiutil \
		mrsasutil
	$(ss) mplayer \
		gmplayer kplayer mencoder mplayer2
	$(ss) mutt \
		muttng neomutt
	$(ss) nslookup \
		host
	$(ss) p4 \
		g4
	$(ss) perl \
		perldoc
	$(ss) pine \
		alpine
	$(ss) ping \
		ping4 ping6
	$(ss) pkg-config \
		pkgconf
if BSD
	$(ss) pkg_delete \
		pkg_deinstall pkg_info
endif
	$(ss) pgrep \
		pkill
	$(ss) pm-hibernate \
		pm-suspend pm-suspend-hybrid
	$(ss) psql \
		createdb createuser dropdb dropuser
	$(ss) postmap \
		postalias
	$(ss) povray \
		spovray xpovray
	$(ss) puppet \
		filebucket puppetca puppetd puppetdoc puppetmasterd puppetqd \
		puppetrun ralsh
	$(ss) pytest \
		py.test py.test-2 py.test-3 pytest-2 pytest-3
	$(ss) pydoc \
		pydoc3 pydoc3.13 pydoc3.14 pydoc3.15
	$(ss) pylint \
		pylint-2 pylint-3
	$(ss) python \
		micropython pypy pypy3 pyston pyston3 python2 python2.7 \
		python3 python3.3  python3.4 python3.5 python3.6 python3.7 \
		python3.8 python3.9 python3.10 python3.11 python3.12 \
		python3.13 python3.14 python3.15
	$(ss) pyvenv \
		pyvenv-3.4 pyvenv-3.5 pyvenv-3.6 pyvenv-3.7 pyvenv-3.8 \
		pyvenv-3.9 pyvenv-3.10 pyvenv-3.11 pyvenv-3.12 pyvenv-3.13 \
		pyvenv-3.14 pyvenv-3.15
	$(ss) qdbus \
		dcop
	$(ss) qemu \
		qemu-kvm qemu-system-i386 qemu-system-x86_64
	$(ss) quota \
		edquota quotacheck quotaoff quotaon repquota setquota
	$(ss) rcs \
		ci co rcsdiff rlog
	$(ss) rpm \
		rpmbuild rpmbuild-md5
	$(ss) rpm2tgz \
		rpm2targz rpm2txz
	$(ss) smbclient \
		smbcacls smbcquotas smbget smbpasswd smbtar smbtree
	$(ss) sbcl \
		sbcl-mt
	$(ss) sha256sum \
		b2sum cksum md5sum shasum sha1sum sha224sum sha384sum sha512sum
	$(ss) ssh \
		autossh scp sftp sidedoor slogin
	$(ss) sudo \
		sudo-rs sudo.ws sudoedit
	$(ss) tar \
		bsdtar gtar star
	$(ss) tracepath \
		tracepath6
	$(ss) update-alternatives \
		alternatives
	$(ss) vipw \
		vigr
	$(ss) vncviewer \
		tightvncviewer xvnc4viewer
	$(ss) wine \
		wine-development wine-stable \
		wine64 wine64-development wine64-stable
	$(ss) wodim \
		cdrecord
	$(ss) xz \
		pxz
	$(ss) ypmatch \
		ypcat
.PHONY: symlinks

SETUP_SYMLINKS = $(srcdir)/../setup-symlinks.sh

all-local: ss = $(SETUP_SYMLINKS) .
all-local: symlinks

install-data-hook: ss = $(SETUP_SYMLINKS) $(DESTDIR)$(bashcompcoredir)
install-data-hook: symlinks

check-local:
	REPLY=0; \
	for file in $(bashcompcore_DATA); do \
		$${bashcomp_bash:-$${BASH:-bash}} \
			-O extglob -n $(srcdir)/$$file || REPLY=$$?; \
	done; \
	exit $$REPLY
