cross_platform = adb.bash \
		argc.bash \
		bombadil.bash \
		cal.bash \
		cargo.bash \
		chfn.bash \
		chsh.bash \
		coder.bash \
		delta.bash \
		dmesg.bash \
		eject.bash \
		flamegraph.bash \
		gaiacli.bash \
		gh.bash \
		golangci-lint.bash \
		gsctl.bash \
		hexdump.bash \
		hwclock.bash \
		insmod.bash \
		interdiff.bash \
		ionice.bash \
		jj.bash \
		jungle.bash \
		keyring.bash \
		kontena.bash \
		look.bash \
		mdbook.bash \
		mock.bash \
		modinfo.bash \
		modprobe.bash \
		modules.bash \
		mount.bash \
		mount.linux.bash \
		mtr.bash \
		newgrp.bash \
		nmcli.bash \
		nox.bash \
		nvm.bash \
		pip.bash \
		pipenv.bash \
		renice.bash \
		repomanage.bash \
		reptyr.bash \
		rfkill.bash \
		rg.bash \
		rmmod.bash \
		rtcwake.bash \
		ruff.bash \
		runuser.bash \
		rustup.bash \
		secret-tool.bash \
		shtab.bash \
		slackpkg.bash \
		sops.bash \
		stern.bash \
		stripe.bash \
		su.bash \
		svn.bash \
		svnadmin.bash \
		svnlook.bash \
		syncthing.bash \
		task.bash \
		tokio-console.bash \
		udevadm.bash \
		umount.bash \
		umount.linux.bash \
		uvx.bash \
		vault.bash \
		wasmer.bash \
		write.bash \
		xm.bash \
		yq.bash \
		yum.bash

# We include all the files in the tarball
EXTRA_DIST = $(cross_platform)

bashcompfallbackdir = $(datadir)/$(PACKAGE)/completions-fallback
bashcompfallback_DATA = $(cross_platform)

CLEANFILES = \
	airflow.bash \
	allero.bash \
	alp.bash \
	ansible.bash \
	ansible-config.bash \
	ansible-console.bash \
	ansible-doc.bash \
	ansible-galaxy.bash \
	ansible-inventory.bash \
	ansible-playbook.bash \
	ansible-pull.bash \
	ansible-vault.bash \
	apko.bash \
	aqua.bash \
	arduino-cli.bash \
	argo.bash \
	asdf.bash \
	atlas.bash \
	atmos.bash \
	bao.bash \
	bashbot.bash \
	black.bash \
	blackd.bash \
	bosh.bash \
	buf.bash \
	caddy.bash \
	chamber.bash \
	changie.bash \
	chezmoi.bash \
	cilium.bash \
	cloudquery.bash \
	clusterctl.bash \
	cmctl.bash \
	colima.bash \
	conda.bash \
	conform.bash \
	conftest.bash \
	constellation.bash \
	consul.bash \
	container-structure-test.bash \
	cosign.bash \
	crane.bash \
	crc.bash \
	crictl.bash \
	ctlptl.bash \
	cue.bash \
	cz.bash \
	dagger.bash \
	dapr.bash \
	dasel.bash \
	datree.bash \
	deck.bash \
	deno.bash \
	depot.bash \
	devspace.bash \
	diesel.bash \
	diffoci.bash \
	dive.bash \
	dlv.bash \
	docker.bash \
	dprint.bash \
	driftctl.bash \
	dyff.bash \
	esc.bash \
	flask.bash \
	flux.bash \
	furyctl.bash \
	fx.bash \
	gaiad.bash \
	gardenctl.bash \
	gcrane.bash \
	gh-label.bash \
	ghorg.bash \
	git-bump.bash \
	gitconfig.bash \
	gitleaks.bash \
	gitsign.bash \
	glab.bash \
	glances.bash \
	glen.bash \
	glow.bash \
	go-licenses.bash \
	gomarklint.bash \
	gopass.bash \
	gopherjs.bash \
	goreleaser.bash \
	grype.bash \
	gup.bash \
	hd.bash \
	helm.bash \
	helmfile.bash \
	hostctl.bash \
	httpx.bash \
	hugo.bash \
	ignite.bash \
	imgpkg.bash \
	incus.bash \
	infracost.bash \
	insmod.static.bash \
	istioctl.bash \
	just.bash \
	jwt.bash \
	k0sctl.bash \
	k3d.bash \
	k3s.bash \
	k3sup.bash \
	k6.bash \
	k9s.bash \
	kafkactl.bash \
	kapp.bash \
	kata-runtime.bash \
	kconf.bash \
	kind.bash \
	kn.bash \
	ko.bash \
	kompose.bash \
	kool.bash \
	kops.bash \
	krane.bash \
	kratos.bash \
	kube-capacity.bash \
	kube-linter.bash \
	kubeadm.bash \
	kubebuilder.bash \
	kubecm.bash \
	kubectl.bash \
	kubectl-argo-rollouts.bash \
	kubectl-kuttl.bash \
	kubelogin.bash \
	kubemqctl.bash \
	kubescape.bash \
	kubesec.bash \
	kubeshark.bash \
	kubespy.bash \
	kustomize.bash \
	kyverno.bash \
	lefthook.bash \
	limactl.bash \
	linkerd.bash \
	mado.bash \
	mago.bash \
	mattermost.bash \
	melange.bash \
	metalctl.bash \
	minikube.bash \
	minishift.bash \
	mise.bash \
	mmctl.bash \
	mockery.bash \
	moldy.bash \
	multi-gitter.bash \
	ncal.bash \
	nerdctl.bash \
	nfpm.bash \
	ngrok.bash \
	nomad.bash \
	notation.bash \
	nova.bash \
	npm.bash \
	oc.bash \
	odo.bash \
	okteto.bash \
	op.bash \
	opa.bash \
	oras.bash \
	ory.bash \
	packer.bash \
	pip3.bash \
	pitchfork.bash \
	pluto.bash \
	pnpm.bash \
	polygon-edge.bash \
	popeye.bash \
	pulumi.bash \
	px.bash \
	qrpc.bash \
	random.bash \
	rclone.bash \
	regal.bash \
	regctl.bash \
	release-plz.bash \
	rustic.bash \
	sentry-cli.bash \
	sinker.bash \
	skaffold.bash \
	slsa-verifier.bash \
	sopstool.bash \
	spacectl.bash \
	ssh-inscribe.bash \
	sshi.bash \
	starship.bash \
	steampipe.bash \
	syft.bash \
	talhelper.bash \
	tanzu.bash \
	tanzu-core.bash \
	tctl.bash \
	tendermint.bash \
	terraform.bash \
	tfctl.bash \
	tilt.bash \
	timoni.bash \
	tkn.bash \
	tkn-pac.bash \
	tldr.bash \
	todoist.bash \
	tofu.bash \
	trash.bash \
	trash-empty.bash \
	trash-list.bash \
	trash-put.bash \
	trash-restore.bash \
	trivy.bash \
	upctl.bash \
	uv.bash \
	vacuum.bash \
	vela.bash \
	velero.bash \
	venom.bash \
	virtctl.bash \
	wasmer-headless.bash \
	watchexec.bash \
	waydroid.bash \
	xc.bash \
	ytt.bash \
	zarf.bash \
	zitadel.bash \
	zola.bash

symlinks: $(DATA)
	$(ss) bombadil \
		mago release-plz
	$(ss) cal \
		ncal
	$(ss) flamegraph \
		just \
		watchexec
	$(ss) gaiacli \
		gaiad \
		ngrok \
		npm \
		sopstool \
		tendermint
	$(ss) gh \
		glab infracost
	$(ss) golangci-lint \
		allero \
		alp \
		apko \
		aqua \
		arduino-cli \
		argo \
		asdf \
		atlas \
		atmos \
		bashbot \
		bosh \
		buf \
		caddy \
		chamber \
		changie \
		chezmoi \
		cilium \
		cloudquery \
		clusterctl \
		cmctl \
		colima \
		conform \
		conftest \
		constellation \
		container-structure-test \
		cosign \
		crane \
		crc \
		crictl \
		ctlptl \
		cue \
		dagger \
		dapr \
		dasel \
		datree \
		deck \
		depot \
		devspace \
		diffoci \
		dive \
		dlv \
		docker \
		driftctl \
		dyff \
		esc \
		flux \
		furyctl \
		gardenctl \
		gcrane \
		gh-label \
		ghorg \
		git-bump \
		gitconfig \
		gitleaks \
		gitsign \
		glen \
		glow \
		go-licenses \
		gomarklint \
		gopass \
		gopherjs \
		goreleaser \
		grype \
		gup \
		helm \
		helmfile \
		hostctl \
		hugo \
		imgpkg \
		incus \
		ignite \
		istioctl \
		jwt \
		k0sctl \
		k3d \
		k3s \
		k3sup \
		k6 \
		k9s \
		kafkactl \
		kapp \
		kconf \
		kind \
		kn \
		ko \
		kompose \
		kool \
		kops \
		krane \
		kratos \
		kubeadm \
		kube-capacity \
		kube-linter \
		kubebuilder \
		kubecm \
		kubectl \
		kubectl-argo-rollouts \
		kubectl-kuttl \
		kubescape \
		kubelogin \
		kubemqctl \
		kubesec \
		kubeshark \
		kubespy \
		kustomize \
		kyverno \
		lefthook \
		limactl \
		linkerd \
		mattermost \
		melange \
		metalctl \
		minikube \
		minishift \
		mise \
		mmctl \
		mockery \
		moldy \
		multi-gitter \
		nerdctl \
		nfpm \
		notation \
		nova \
		oc \
		odo \
		okteto \
		op \
		opa \
		oras \
		ory \
		pitchfork \
		pluto \
		pnpm \
		polygon-edge \
		popeye \
		pulumi \
		px \
		qrpc \
		random \
		rclone \
		regal \
		regctl \
		sinker \
		skaffold \
		slsa-verifier \
		spacectl \
		sshi \
		ssh-inscribe \
		steampipe \
		syft \
		talhelper \
		tanzu \
		tanzu-core \
		tctl \
		tfctl \
		tilt \
		timoni \
		tkn \
		tkn-pac \
		trivy \
		upctl \
		vacuum \
		vela \
		velero \
		venom \
		virtctl \
		ytt \
		zarf \
		zitadel \
		zola
	$(ss) hexdump \
		hd
	$(ss) insmod \
		insmod.static
	$(ss) keyring \
		glances tldr trash trash-empty trash-list \
		trash-put trash-restore
	$(ss) mdbook \
		deno \
		diesel \
		dprint \
		rustic \
		sentry-cli \
		starship
	$(ss) nox \
		airflow \
		ansible \
		ansible-config \
		ansible-console \
		ansible-doc \
		ansible-galaxy \
		ansible-inventory \
		ansible-playbook \
		ansible-pull \
		ansible-vault \
		conda \
		cz \
		waydroid
	$(ss) pip \
		pip3
	$(ss) pipenv \
		black blackd flask httpx
	$(ss) ruff \
		mado \
		uv
	$(ss) sops \
		kata-runtime todoist
	$(ss) vault \
		bao \
		consul \
		fx \
		nomad \
		packer \
		terraform \
		tofu \
		xc
	$(ss) wasmer \
		wasmer-headless
.PHONY: symlinks

SETUP_SYMLINKS = $(srcdir)/../setup-symlinks.sh

all-local: ss = $(SETUP_SYMLINKS) .
all-local: symlinks

install-data-hook: ss = $(SETUP_SYMLINKS) $(DESTDIR)$(bashcompfallbackdir)
install-data-hook: symlinks

check-local:
	REPLY=0; \
	for file in $(bashcompfallback_DATA); do \
		$${bashcomp_bash:-$${BASH:-bash}} \
			-O extglob -n $(srcdir)/$$file || REPLY=$$?; \
	done; \
	exit $$REPLY
